test/tests/stages/18_structures/invalid_parse/misplaced_storage_class.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  struct
  static
  identifier(s)
  identifier(foo)
  ;
